<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.topservice.bubbllzStoreAdmin.SignInActivity">

    <CheckedTextView
        android:id="@+id/loggedUserCheckedTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ticketNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ticketNumber"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loggedUserCheckedTextView" />

    <EditText
        android:id="@+id/ticketNumberInputText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ticketNumberInput"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/ticketNumberTextView"
        app:layout_constraintHorizontal_bias="0.502" />

    <Button
        android:id="@+id/checkTicketNumberButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="checkTicketNumber"
        android:text="@string/button_check_ticketNumber"
        android:textAllCaps="false"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ticketNumberInputText" />

    <TextView
        android:id="@+id/checkTicketNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/discountMessage"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkTicketNumberButton" />

    <TextView
        android:id="@+id/checkIfDiscountGivenTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/checkIfDiscountGiven"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkTicketNumberTextView" />

    <Button
        android:id="@+id/yesButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:onClick="yesButtonPressed"
        android:text="@string/yesButton"
        android:textAllCaps="false"
        android:visibility="invisible"
        app:layout_constraintRight_toLeftOf="@+id/noButton"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/checkIfDiscountGivenTextView"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/ticketNumberTextView" />

    <Button
        android:id="@+id/noButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:onClick="noButtonPressed"
        android:text="@string/noButton"
        android:textAllCaps="false"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/checkIfDiscountGivenTextView"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="@+id/ticketNumberTextView" />

</android.support.constraint.ConstraintLayout>
